Bug 130380 - FILEOPEN XLSX Area chart shrinks and the data labels are under the chart
Summary: FILEOPEN XLSX Area chart shrinks and the data labels are under the chart
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, filter:xlsx, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-02-03 10:23 UTC by NISZ LibreOffice Team
Modified: 2020-02-11 12:46 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (19.84 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-02-03 10:26 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (88.50 KB, image/png)
2020-02-03 10:27 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-02-03 10:23:59 UTC
Description:
Area chart shrinks and the data labels are under the chart if the start position of vertical axis is not zero in Microsoft Excel XLSX file, when the worksheet is opened in LibreOffice Calc 7.0.0.0.alpha0+ (x64).

Steps to Reproduce:
    1. Create an Area Chart in Microsoft Excel with values 5, 6.
    2. Add data labels.
    3. Save the file as XLSX.
    4. Open the worksheet in Calc.

Actual Results:
The chart shrinks, the data labels are under the chart.

Expected Results:
The chart should have the same size, the data labels should aligned vertically to center.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2020-02-03 10:25:40 UTC
LibreOffice details:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: ee9a15422561dfae0ae259c1641695f6c5c41388
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Additional Information: 
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=f8966bb398cf0623be841c618b123866801a063c 
author	Tünde Tóth <tundeth@gmail.com>	2020-01-16 12:10:24 +0100
committer	László Németh <nemeth@numbertext.org>	2020-01-28 09:51:07 +0100
summary: Chart OOXML import: fix area chart data label position
Comment 2 NISZ LibreOffice Team 2020-02-03 10:26:56 UTC
Created attachment 157611 [details]
Example file from Excel
Comment 3 NISZ LibreOffice Team 2020-02-03 10:27:50 UTC
Created attachment 157612 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 4 NISZ LibreOffice Team 2020-02-03 10:30:50 UTC
Adding CC to: Tünde Tóth
Comment 5 Commit Notification 2020-02-07 17:37:32 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a979047eefec607b311773c7e2a71bb3ee2c6362

tdf#130380 Chart: Fix area chart data labels position

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2020-02-11 12:46:34 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 5d00a1c9c6e85f3d7a3e05ab485da79980c38d44
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Tünde Tóth, thanks for fixing this issue!