tdf#130380 Chart: Fix area chart data labels position

Regression from commit: f8966bb398cf0623be841c618b123866801a063c
(tdf#130031 Chart OOXML import: fix area chart data label position)

Change-Id: Iafcbacb0ecf6f8a175adbf0782ee3e3a1185a726